--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.1",
+    "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.3.0",
     "koa-cors": "^0.0.16",
     "koa-router": "^12.0.0",
     "koa-session": "^6.2.0",
     "koa-static": "^5.0.0",
     "mongoose": "^6.8.1",
-    "mongoose-update-if-current": "^1.4.0"
+    "mongoose-update-if-current": "^1.4.0",
+    "uuid": "^9.0.0"
   }
 }
