--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
     "mongoose": "^6.8.1",
+    "mongoose-auto-increment-fix": "^5.0.2",
     "mongoose-update-if-current": "^1.4.0",
     "uuid": "^9.0.0"
   }
